--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {{!-- link stylesheets --}}
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
   <title>Document</title>
 </head>
 
@@ -19,6 +21,9 @@
 
   {{!-- partial templates will replace the part of "body" here --}}
   {{{body}}}
+
+  {{!-- link js --}}
+  <script src="/javascripts/bootstrap.js"></script>
 </body>
 
 </html>
